feat: add media for tablet

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 						<div class="header__content-align">
 							<nav class="navigation">
-								<div class="hamurger__container hidden">
+								<div class="hamurger__container ">
 									<span class="hamburger__line"></span>
 								</div>
-								<ul class="navigation-list">
+								<ul class="navigation-list hidden">
 									<li class="navigation-link">shop</li>
 									<li class="navigation-link">about us</li>
 									<li class="navigation-link">our story</li>
@@ -39,14 +39,14 @@
 
 						</div>
 						<div class="header__content-align">
-							<div class="current-currency-container">
+							<div class="current-currency-container hidden">
 								<div class="currency-image">
 									<img class="currency-image-inner" src="./assets/img/flag.jpg" alt="" width="32" height="32">
 								</div>
 								<span class="currency-text">CAD</span>
 							</div>
 							<div class="header__item header-icon__container">
-								<a class="header-icon-link" href="#">
+								<a class="header-icon-link hidden" href="#">
 									<object data="./assets/svg/user.svg" type="image/svg+xml"
 										class="header-icon user-icon"></object>
 								</a>
@@ -110,24 +110,12 @@
 					<h1 class="product__title">energy bites assorted box</h1>
 					<a class="" href="">
 						<div class="revies__container">
-							<span class="star revie-item">
-
-							</span>
-							<span class="star revie-item">
-
-							</span>
-							<span class="star revie-item">
-
-							</span>
-							<span class="star revie-item">
-
-							</span>
-							<span class="star revie-item">
-
-							</span>
-							<span class="star revie-item">
-
-							</span>
+							<span class="star revie-item"> </span>
+							<span class="star revie-item"> </span>
+							<span class="star revie-item"> </span>
+							<span class="star revie-item"> </span>
+							<span class="star revie-item"> </span>
+							<span class="star revie-item"> </span>
 							<span class="revie-text revie-item">87 reveiws</span>
 						</div>
 					</a>
@@ -332,26 +320,25 @@
 									<img id="additional-image-12" class="background-additional-image "
 										src="./assets/img/hazelnutboxweb_834x.webp" alt="" width="360">
 								</div>
-								<div class="additional-product-meta">
-									<h4 class="additional-propuct__title">hazelnut energy bites</h4>
-									<div class="additional-product__price">
-										<span class="">from $ 40.00 CAD</span>
-									</div>
-									<a class="" href="">
-										<div class="revies__container">
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="revie-text revie-item">102 reveiws</span>
-										</div>
-									</a>
-								</div>
 							</a>
-							<button class="button button-bordered additional-product-link">view product</button>
-						</div>
+							<div class="additional-product-meta">
+								<h4 class="additional-propuct__title">hazelnut energy bites</h4>
+								<div class="additional-product__price">
+									<span class="">from $ 40.00 CAD</span>
+								</div>
+								<a class="" href="">
+									<div class="revies__container">
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="revie-text revie-item additional-revie">102 reveiws</span>
+									</div>
+								</a>
+							</div>
+						</div><button class="button button-bordered additional-product-link">view product</button>
 					</div>
 					<div class="additional-products-item">
 						<div class="additional-product-card" id="additional-card-2">
@@ -363,38 +350,26 @@
 										src="./assets/img/custom_resized_8cb2d416-8860-44b9-8cf2-54701784191c_540x.webp" alt=""
 										width="360">
 								</div>
-								<div class="additional-product-meta">
-									<h4 class="additional-propuct__title">ultimate variety pack</h4>
-									<div class="additional-product__price">
-										<span class="">$ 140.00 CAD</span>
-									</div>
-									<a class="" href="">
-										<div class="revies__container">
-											<span class="star revie-item">
-
-											</span>
-											<span class="star revie-item">
-
-											</span>
-											<span class="star revie-item">
-
-											</span>
-											<span class="star revie-item">
-
-											</span>
-											<span class="star revie-item">
-
-											</span>
-											<span class="star revie-item">
-
-											</span>
-											<span class="revie-text revie-item">151 reveiws</span>
-										</div>
-									</a>
-								</div>
 							</a>
-							<button class="button button-bordered additional-product-link">view product</button>
+							<div class="additional-product-meta">
+								<h4 class="additional-propuct__title">ultimate variety pack</h4>
+								<div class="additional-product__price">
+									<span class="">$ 140.00 CAD</span>
+								</div>
+								<a class="" href="">
+									<div class="revies__container additional-revie__container">
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="revie-text revie-item additional-revie">151 reveiws</span>
+									</div>
+								</a>
+							</div>
 						</div>
+						<button class="button button-bordered additional-product-link">view product</button>
 					</div>
 					<div class="additional-products-item">
 						<div class="additional-product-card" id="additional-card-3">
@@ -405,28 +380,27 @@
 									<img id="additional-image-32" class="background-additional-image "
 										src="./assets/img/pistsquare_540x.webp" alt="" width="360">
 								</div>
-								<div class="additional-product-meta">
-									<h4 class="additional-propuct__title">pistachio energy bites</h4>
-									<div class="additional-product__price">
-										<span class="">from $ 40.00 CAD</span>
-									</div>
-									<a class="" href="">
-										<div class="revies__container">
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="star revie-item"> </span>
-											<span class="revie-text revie-item">139 reveiws</span>
-										</div>
-									</a>
-								</div>
 							</a>
-							<button class="button button-bordered additional-product-link">view product</button>
+							<div class="additional-product-meta">
+								<h4 class="additional-propuct__title">pistachio energy bites</h4>
+								<div class="additional-product__price">
+									<span class="">from $ 40.00 CAD</span>
+								</div>
+								<a class="" href="">
+									<div class="revies__container additional-revie__container">
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="star revie-item"> </span>
+										<span class="revie-text revie-item additional-revie">139 reveiws</span>
+									</div>
+								</a>
+							</div>
 						</div>
+						<button class="button button-bordered additional-product-link">view product</button>
 					</div>
-
 				</div>
 			</div>
 		</div>
@@ -454,7 +428,7 @@
 		<div class="footer__container">
 			<div class="footer-item__container">
 				<div class="footer-sign-up__container">
-					<p class="footer-sign-up__title">sign up to our newsletter</p>
+					<h4 class="footer-sign-up__title">sign up to our newsletter</h4>
 					<form method="post" action="#" id="newsletter-footer" accept-charset="UTF-8" class="contact-form">
 						<div class="footer__newsletter">
 							<input type="email" value="" placeholder="Email address" name="contact[email]"
@@ -515,7 +489,7 @@
 			</div>
 			<div class="footer-item__container">
 				<a href="">
-					<img class="logo" src="./assets/png/whitelogopng_x32@2x.webp" alt="">
+					<img class="footer-logo" src="./assets/png/whitelogopng_x32@2x.webp" alt="">
 				</a>
 				<div class="footer__copyright">
 					<span>@</span>
