--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 						</div>
 						<div class="header__content-align logo-centered">
 							<a href="https://nomz.com/">
-								<img class="logo header-logo" src="./assets/png/whitelogopng_x32@2x.webp" alt="">
+								<img id="header-logo" class="logo header-logo" src="./assets/png/whitelogopng_x32@2x.webp"
+									alt="">
 							</a>
 
 
@@ -65,7 +66,7 @@
 		</div>
 	</header>
 
-	<main class="main">
+	<main class="main" id="main">
 		<div class="main__content product-section product__layout">
 			<div class="product-images__container product__layout-item">
 				<div class="main-image-slider">
@@ -510,6 +511,18 @@
 			</div>
 		</div>
 	</footer>
+	<button aria-label="Open Smile.io Rewards Program" class="gift-bag-button">
+		<img class="gift-bag-img" src="./assets/svg/gift-bag.svg" alt="" width="30" height="30">
+	</button>
+
+	<a href="#main">
+		<div class="mobile-button-to-top">
+			<img src="./assets/svg/arrow-up.svg" alt="" width="20px" height="20px">
+		</div>
+
+	</a>
+
+
 	<script src="./js/sctipt.js"></script>
 </body>
 
