feat: add transition for header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 		<div class="header__wrapper">
 			<div class="header__container">
 				<div class="header__content-top">Subscribe+Save 15%</div>
-				<div class="header">
+				<div class="header__content-bottom">
 					<div class="header__content">
-
 						<div class="header__content-align">
 							<nav class="navigation">
 								<div class="hamurger__container ">
@@ -516,7 +515,7 @@
 	</button>
 
 	<a href="#main">
-		<div class="mobile-button-to-top">
+		<div id="arrowUp" class="mobile-button-to-top hidden">
 			<img src="./assets/svg/arrow-up.svg" alt="" width="20px" height="20px">
 		</div>
 
