feat: add review section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
 	<header>
 		<div class="header__wrapper">
 			<div class="header__container">
@@ -67,6 +68,7 @@
 
 	<main class="main" id="main">
 		<div class="main__content product-section product__layout">
+			<!-- MAIN IAGE -->
 			<div class="product-images__container product__layout-item">
 				<div class="main-image-slider">
 					<div class="main-slider-border">
@@ -76,8 +78,8 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
+				<!-- SOURSE LITTLE SLIDER -->
 				<div class="smoll-image-slider">
 					<div class="smoll-slider-border">
 						<div class="smoll-slider">
@@ -104,6 +106,7 @@
 
 				</div>
 			</div>
+			<!-- PRODUCT PROPERTIES -->
 			<div class="product-form product__layout-item">
 				<div class="products-form__content"></div>
 				<form action="#" method="post" name="product__form">
@@ -142,6 +145,7 @@
 
 						</div>
 					</div>
+					<!-- ADD TO BASKET -->
 					<div class="quantity-basket">
 						<div class="product-quantity__container">
 							<button type="button" class="quantity__minus quantity_change">
@@ -169,6 +173,7 @@
 						</div>
 						<button class="button button-bordered add-to-card-button">add to card</button>
 					</div>
+					<!-- SUBSCRIBE OPTIONS -->
 					<div class="purchase-options-buttons__container">
 						<div class="purchase-button-group purchase-button-group-active">
 							<p class="purchase-button-text">Subscribe and <span>Save 15%</span></p>
@@ -247,7 +252,7 @@
 							<span>pistachio bites: almonds, dates, fair trade cocoa, pistachios, sea salt</span>
 						</p>
 						<p> <strong>Allergen warning:</strong> products contains tree nuts</p>
-
+						<!-- ADDITIONA ACCORDING INFORMATION -->
 						<div class="accordion__wrapper">
 							<div class="accordion-item">
 								<h3 class="accordion__title">
@@ -302,12 +307,206 @@
 					</div>
 				</form>
 			</div>
+		</div>
 
-		</div>
-		<div class="reviews">
-			<p>тут будут отзывы о товаре</p>
-		</div>
-		<div class="additional-offer__section">
+		<!-- REVIEWES SECTION -->
+		<section class="reviews">
+			<div class="reviews__container">
+				<div class="review-top__container ">
+					<div class="review-top__content">
+						<div class="all-reviev__container">
+							<span class="star all-revie-item"> </span>
+							<span class="star all-revie-item"> </span>
+							<span class="star all-revie-item"> </span>
+							<span class="star all-revie-item"> </span>
+							<span class="star all-revie-item"> </span>
+							<span class="revie-text all-revie-item">87 Reveiws</span>
+						</div>
+						<div class="write-review__button button-colored">write a review</div>
+					</div>
+					<div class="review-top__content">
+						<div class="review__title__container">
+							<div class="review__title">
+								Reviews (<span>87</span>)
+							</div>
+						</div>
+						<div class="sort__button__container">
+							<div class="sort__button">Sort: <span class="Select">Select</span> </div>
+							<ul class="sort__button-select list-categories hidden">
+								<li class="list-category" data-value="date desc" sort-name="newest"
+									data-analytic-property="newest"> <a><span
+											class="yotpo-icon yotpo-icon-clock"></span>Newest</a> </li>
+								<li class="list-category" data-value="images desc" sort-name="with_images"
+									data-analytic-property="with_images">
+									<a><span class="yotpo-icon yotpo-icon-image"></span>With Pictures</a>
+								</li>
+								<li class="list-category" data-value="rating desc" sort-name="highest_rating"
+									data-analytic-property="highest_rating"> <a><span
+											class="yotpo-icon yotpo-icon-default-star"></span>Highest
+										Rating</a> </li>
+								<li class="list-category" data-value="rating asc" sort-name="lowest_rating"
+									data-analytic-property="lowest_rating">
+									<a><span class="yotpo-icon yotpo-icon-default-empty-star"></span>Lowest Rating</a>
+								</li>
+								<li class="list-category" data-value="votes_up desc" sort-name="most_helpful"
+									data-analytic-property="most_helpful">
+									<a><span class="yotpo-icon yotpo-icon yotpo-icon-thumbs-up"></span> Most Votes</a>
+								</li>
+								<li class="list-category" data-value="votes_down desc" sort-name="least_helpful"
+									data-analytic-property="least_helpful"> <a><span
+											class="yotpo-icon yotpo-icon yotpo-icon-thumbs-down"></span>Least
+										Votes</a> </li>
+							</ul>
+						</div>
+
+
+					</div>
+				</div>
+
+				<!--  ONE USER START -->
+				<!-- WITH ANSWER -->
+				<div class="review__main__container">
+					<div class="user-review__container">
+						<div class="user-review-item">
+							<span class="user-letter">B</span>
+							<div class="user-block">
+								<div class="user-name">brooklyn d.</div>
+								<div class="all-reviev__container">
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+								</div>
+							</div>
+						</div>
+						<span class="user-review-item">
+							05/04/22
+						</span>
+					</div>
+					<div class="user-review__container">
+						<p class="short-review">So yummy!</p>
+						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
+							Quick, easy and so yummy!</p>
+
+						<!--  ANSWER -->
+						<div class="answer__container">
+							<div class="answer__content">
+								<div class="answer-item answer__header">
+									<div class="answer__header-align">
+										<span class="answer-icon"></span>
+										<span class="answer-name">Store Owner</span>
+									</div>
+									<div class="answer__header-align">
+										<span class="answer-date">05/12/22</span>
+									</div>
+
+								</div>
+								<div class="answer-item answer__text">Matthew, thank you so much for the "best vegan snack"
+									title –
+									we're honoured!
+									So glad you're loving the bites.</div>
+							</div>
+						</div>
+						<!-- END ANSWER -->
+
+					</div>
+				</div>
+
+
+				<!--  ONE USER END -->
+
+				<!--  ONE USER START -->
+				<div class="review__main__container">
+					<div class="user-review__container">
+						<div class="user-review-item">
+							<span class="user-letter">B</span>
+							<div class="user-block">
+								<div class="user-name">brooklyn d.</div>
+								<div class="all-reviev__container">
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+								</div>
+							</div>
+						</div>
+						<span class="user-review-item">
+							05/04/22
+						</span>
+					</div>
+					<div class="user-review__container">
+						<p class="short-review">So yummy!</p>
+						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
+							Quick, easy and so yummy!</p>
+					</div>
+				</div>
+				<!--  ONE USER END -->
+
+				<!--  ONE USER START -->
+				<div class="review__main__container">
+					<div class="user-review__container">
+						<div class="user-review-item">
+							<span class="user-letter">B</span>
+							<div class="user-block">
+								<div class="user-name">brooklyn d.</div>
+								<div class="all-reviev__container">
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+								</div>
+							</div>
+						</div>
+						<span class="user-review-item">
+							05/04/22
+						</span>
+					</div>
+					<div class="user-review__container">
+						<p class="short-review">So yummy!</p>
+						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
+							Quick, easy and so yummy!</p>
+					</div>
+				</div>
+				<!--  ONE USER END -->
+
+				<!--  ONE USER START -->
+				<div class="review__main__container">
+					<div class="user-review__container">
+						<div class="user-review-item">
+							<span class="user-letter">B</span>
+							<div class="user-block">
+								<div class="user-name">brooklyn d.</div>
+								<div class="all-reviev__container">
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+									<span class="star all-revie-item"> </span>
+								</div>
+							</div>
+						</div>
+						<span class="user-review-item">
+							05/04/22
+						</span>
+					</div>
+					<div class="user-review__container">
+						<p class="short-review">So yummy!</p>
+						<p class="long-review">These energy bites are amazing for a morning pick me up or an afternoon snack!
+							Quick, easy and so yummy!</p>
+					</div>
+				</div>
+				<!--  ONE USER END -->
+			</div>
+
+
+
+		</section>
+
+		<!-- ADDITIONA OFFER SECTION -->
+		<section class="additional-offer__section">
 			<div class="additional-offer__container">
 				<h3 class="additional-offer__title">You may also like</h3>
 				<div class="additional-products__container">
@@ -403,7 +602,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<section class="sign-up__section">
 			<div class="sign-up__container">
 				<div class="sign-up-centered">
@@ -520,8 +719,6 @@
 		</div>
 
 	</a>
-
-
 	<script src="./js/sctipt.js"></script>
 </body>
 
